syntax = "proto3";

package atlas;

option go_package = "github.com/greenmochi/ultimate/services/atlas/proto/atlas";

import "google/api/annotations.proto";

import "message/atlas.proto";

service Atlas {
    rpc Ping(PingRequest) returns (PingReply) {
        option (google.api.http) = {
            post: "/atlas/ping"
            body: "*"
        };
    };
    rpc GetPlaylist(message.PlaylistRequest) returns (message.Playlist) {
        option (google.api.http) = {
            post: "/atlas/GetPlaylist"
            body: "*"
        };
    };
}

message PingRequest {
    string message = 1;
}

message PingReply {
    string message = 1;
}